--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Main Menu-->
@@ -392,17 +392,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Help Menu" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4c-Dz-uEP">
-                                <rect key="frame" x="118" y="28" width="84" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Spellthrowers Help Section" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4c-Dz-uEP">
+                                <rect key="frame" x="56" y="28" width="208" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Help text." borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WvH-8O-HE9">
-                                <rect key="frame" x="24" y="78" width="97" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nB-73-2Y0">
                                 <rect key="frame" x="111" y="530" width="98" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -414,6 +409,12 @@
                                     <segue destination="SEj-FN-gUh" kind="modal" id="3cd-ur-waY"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHS-Bz-EuU">
+                                <rect key="frame" x="16" y="57" width="288" height="446.5"/>
+                                <mutableString key="text">Objective: Be the last player standing!Basic Rules:The game starts with an option to play against the AI or against friends using the pass-and-play style. At the beginning of the game, a hand of five cards is dealt to each player. The game randomly decides who goes first. The last player has the option to discard a card and draw a new one to keep it fair.During your turn, you can choose to either discard cards or play a card. When choosing to discard cards, you can discard up to five cards and your turn will end. If you choose to play a card, you can generally only play one card per turn. Cards may be one of five card types, each of which has a special function. At the beginning of your turn, draw back to five cards.Card Types:•	Basic Attack Cards – do damage in correspondence to the value on the card and are discarded after play.o	Fireball – 2 damage (add image)o	Waterfall – 3 damage (add image)o	Hurricane – 4 damage (add image)•	Heal Cards – increase life by 2 points each; all heal cards in hand are played at once and are discarded after use. After healing, you may choose to play another card or discard cards. (add image)•	Weapon Cards – all weapon cards in hand are played at once, summing up the damage dealt. The weapon cards return to your hand once played.o	Laser Pistols – 2 damage each (add image)•	Facedown Cards – played facedown on the field and indicated by a small shield icon (add image) next to player name. If a facedown is played when you already have one on the field, the new card replaces the one played prior. Facedown cards are discarded after activation.o	Spell Shield – activated when an opponent plays an attack card, reflects the attack damage.  (add image) o	EMP – triggered when an opponent plays either an attack or weapon card; removes all weapons and deals two times the number of weapons as damage. If an attack card was used to activate EMP, the attack damage is still dealt normally. (add image)•	Special Attack Cards – have special abilities, discarded after use.o	Zap – special attack cards that counter facedown cards. When a Zap is played, one damage is dealt to the opponent and their facedown card is destroyed. If the opponent does not have any facedown cards, one damage is dealt normally. (add image)o	Scrum – if a player has three of a kind, they can choose to play all three to steal three life points from the opponent. All three cards are discarded after play. (add image)How to win:The game continues until there is only one player with more than zero life points. In the event of a tie, the player with less negative life wins. </mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.1998242029" green="0.56461037199999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -421,7 +422,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ia9-Zg-CuS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="998" y="-756"/>
+            <point key="canvasLocation" x="998" y="-762"/>
         </scene>
         <!--Transition-->
         <scene sceneID="l3N-T9-QA6">
@@ -519,6 +520,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Zsk-g0-jh9"/>
-        <segue reference="CiA-v1-Ghf"/>
+        <segue reference="3cd-ur-waY"/>
     </inferredMetricsTieBreakers>
 </document>
