AI now knows to play heal cards first! Heal nerfed to 2 hp to match card art.

--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -544,7 +544,7 @@ The game continues until there is only one player with more than zero life point
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Zsk-g0-jh9"/>
+        <segue reference="2j8-h3-vr3"/>
         <segue reference="3cd-ur-waY"/>
     </inferredMetricsTieBreakers>
 </document>
